resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
  namespace: ${APPLICATION_NAMESPACE}
  labels:
    app: ${APPLICATION_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APPLICATION_NAME}
  template:
    metadata:
      name: ${APPLICATION_NAME}
      labels:
        app: ${APPLICATION_NAME}
    spec:
      serviceAccountName: ${APPLICATION_NAME}
      containers:
        - name: ${APPLICATION_NAME}
          image: 263529367083.dkr.ecr.ap-south-1.amazonaws.com/eks/${CLUSTER_ENV}/${CLUSTER_NAME}/${APPLICATION_NAMESPACE}/${APPLICATION_NAME}:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: https
              protocol: TCP
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: splunk-efs-storage
              mountPath: /splunk
            - name: data-efs-storage
              mountPath: /data
          resources:
            limits:
              cpu: 1024m
              memory: 2Gi
            requests:
              cpu: 1024m
              memory: 2Gi
      volumes:
        - name: splunk-efs-storage
          persistentVolumeClaim:
            claimName: ${APPLICATION_NAME}-splunk-efs-pvc
        - name: data-efs-storage
          persistentVolumeClaim:
            claimName: ${APPLICATION_NAME}-data-efs-pvc
      restartPolicy: Always
