resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
  namespace: ${APPLICATION_NAMESPACE}
  labels:
    app: ${APPLICATION_NAME}
spec:
  selector:
    app: ${APPLICATION_NAME}
  type: ClusterIP
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  sessionAffinity: None
